# dear-hank-and-john-answers

./: .gitattributes  LICENSE  README.md  episodes.json  generate_episodes_json.py  generate_questions_md.py  pyproject.toml  questions.md
.github/workflows/: refresh.yml
scripts/: generate
